Add missing companion object generation, remove the psi methods from the kotlin generator for now. Some refactoring.