@@ -8,15 +8,9 @@ import com.intellij.notification.NotificationGroupManager;
 import com.intellij.openapi.application.ApplicationManager;
 import com.intellij.openapi.diagnostic.Logger;
 import com.intellij.openapi.ui.MessageType;
-import com.intellij.openapi.util.Pair;
-import com.intellij.openapi.util.Trinity;
 import com.intellij.openapi.util.text.StringUtil;
-import com.intellij.psi.CommonClassNames;
-import com.intellij.psi.NavigatablePsiElement;
 import com.intellij.psi.PsiElement;
 import com.intellij.psi.tree.IElementType;
-import com.intellij.util.ArrayUtil;
-import com.intellij.util.Function;
 import com.intellij.util.ObjectUtils;
 import com.intellij.util.SmartList;
 import com.intellij.util.containers.*;
@@ -24,30 +18,27 @@ import org.intellij.grammar.KnownAttribute;
 import org.intellij.grammar.analysis.BnfFirstNextAnalyzer;
 import org.intellij.grammar.generator.NodeCalls.*;
 import org.intellij.grammar.java.JavaHelper;
+import org.intellij.grammar.parser.GeneratedParserUtilBase;
 import org.intellij.grammar.parser.GeneratedParserUtilBase.Parser;
 import org.intellij.grammar.psi.*;
 import org.intellij.grammar.psi.impl.GrammarUtil;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
-import java.io.File;
 import java.io.IOException;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.*;
 
-import static com.intellij.util.containers.ContainerUtil.emptyList;
 import static com.intellij.util.containers.ContainerUtil.map;
 import static java.lang.String.format;
 import static java.util.stream.Collectors.*;
 import static org.intellij.grammar.analysis.BnfFirstNextAnalyzer.BNF_MATCHES_ANY;
 import static org.intellij.grammar.analysis.BnfFirstNextAnalyzer.BNF_MATCHES_EOF;
 import static org.intellij.grammar.generator.BnfConstants.*;
-import static org.intellij.grammar.generator.NameShortener.addTypeToImports;
 import static org.intellij.grammar.generator.NameShortener.getRawClassName;
 import static org.intellij.grammar.generator.ParserGeneratorUtil.*;
 import static org.intellij.grammar.generator.RuleGraphHelper.*;
-import static org.intellij.grammar.generator.RuleGraphHelper.Cardinality.*;
 import static org.intellij.grammar.psi.BnfTypes.*;
 
 
@@ -77,38 +68,59 @@ public class KotlinParserGenerator extends GeneratorBase {
    */
   private final Map<String, String> myMetaMethodFields = new HashMap<>();
 
-  private final Map<String, Collection<String>> myTokenSets = new TreeMap<>();
   private final Map<String, String> mySimpleTokens;
-  private final Set<String> myTokensUsedInGrammar = new LinkedHashSet<>();
-  private final boolean myNoStubs;
 
+  /**
+   * Name of the class containing runtime parser utilities
+   * (default: {@link GeneratedParserUtilBase}).
+   */
   protected final String myParserUtilClass;
+  /**
+   * An optional class for miscellaneous utility methods
+   * to use in the parser.
+   */
   protected final String myPsiImplUtilClass;
-  private final String myPsiTreeUtilClass;
 
+  /**
+   * Name of the visitor class
+   */
   protected final String myVisitorClassName;
   protected final String myTypeHolderClass;
 
   private final RuleGraphHelper myGraphHelper;
   private final ExpressionHelper myExpressionHelper;
-  private final RuleMethodsHelper myRulesMethodsHelper;
   private final BnfFirstNextAnalyzer myFirstNextAnalyzer;
   private final JavaHelper myJavaHelper;
 
-  protected final Names NAMES;
+  final Names N;
   protected final IntelliJPlatformConstants C;
 
   public KotlinParserGenerator(@NotNull BnfFile psiFile,
                                @NotNull String sourcePath,
                                @NotNull String outputPath,
                                @NotNull String packagePrefix) {
-    super(psiFile, sourcePath, outputPath, packagePrefix);
+    super(psiFile, sourcePath, outputPath, packagePrefix, "kt");
 
-    NAMES = G.names;
+    //super ctor body:
+    //myFile = psiFile;
+    //myGenerateForFleet = psiFile instanceof FleetBnfFileWrapper;
+    //
+    //G = new GenOptions(psiFile);
+    //mySourcePath = sourcePath;
+    //myOutputPath = outputPath;
+    //myPackagePrefix = packagePrefix;
+    //myIntfClassFormat = getPsiClassFormat(myFile);
+    //myImplClassFormat = getPsiImplClassFormat(myFile);
+    //
+    //List<BnfRule> rules = psiFile.getRules();
+    //BnfRule rootRule = rules.isEmpty() ? null : rules.get(0);
+    //myGrammarRoot = rootRule == null ? null : rootRule.getName();
+    //myGrammarRootParser = rootRule == null ? null : getRootAttribute(rootRule, KnownAttribute.PARSER_CLASS);
+
+    N = G.names;
 
     myParserUtilClass = getRootAttribute(myFile, KnownAttribute.PARSER_UTIL_CLASS);
     myPsiImplUtilClass = getRootAttribute(myFile, KnownAttribute.PSI_IMPL_UTIL_CLASS);
-    myPsiTreeUtilClass = getRootAttribute(myFile, KnownAttribute.PSI_TREE_UTIL_CLASS);
     String tmpVisitorClass = getRootAttribute(myFile, KnownAttribute.PSI_VISITOR_NAME);
     tmpVisitorClass = !G.generateVisitor || StringUtil.isEmpty(tmpVisitorClass) ? null :
                       !tmpVisitorClass.equals(myIntfClassFormat.strip(tmpVisitorClass)) ? tmpVisitorClass :
@@ -122,7 +134,7 @@ public class KotlinParserGenerator extends GeneratorBase {
     mySimpleTokens = new LinkedHashMap<>(getTokenTextToNameMap(myFile));
     myGraphHelper = getCached(myFile);
     myExpressionHelper = new ExpressionHelper(myFile, myGraphHelper, this::addWarning);
-    myRulesMethodsHelper = new RuleMethodsHelper(myGraphHelper, myExpressionHelper, mySimpleTokens, G);
+    new RuleMethodsHelper(myGraphHelper, myExpressionHelper, mySimpleTokens, G);
     myFirstNextAnalyzer = BnfFirstNextAnalyzer.createAnalyzer(true);
     myJavaHelper = JavaHelper.getJavaHelper(myFile);
 
@@ -138,7 +150,7 @@ public class KotlinParserGenerator extends GeneratorBase {
         noPsi ? null : getRulePsiClassName(r, myIntfClassFormat), noPsi ? null : getRulePsiClassName(r, myImplClassFormat),
         noPsi ? null : getAttribute(r, KnownAttribute.MIXIN), noPsi ? null : getAttribute(r, KnownAttribute.STUB_CLASS)));
     }
-    myNoStubs = JBIterable.from(myRuleInfos.values()).find(o -> o.stub != null) == null;
+    JBIterable.from(myRuleInfos.values()).find(o -> o.stub != null);
 
     calcFakeRulesWithType();
     calcRulesStubNames();
@@ -198,37 +210,6 @@ public class KotlinParserGenerator extends GeneratorBase {
     }
   }
 
-  private void calcRealSuperClasses(Map<String, BnfRule> sortedPsiRules) {
-    Map<BnfRule, BnfRule> supers = new HashMap<>();
-    for (BnfRule rule : sortedPsiRules.values()) {
-      supers.put(rule, getEffectiveSuperRule(myFile, rule));
-    }
-    JBTreeTraverser<BnfRule> ordered = new JBTreeTraverser<BnfRule>(key -> JBIterable.of(supers.get(key)))
-      .withRoots(sortedPsiRules.values())
-      .withTraversal(TreeTraversal.POST_ORDER_DFS)
-      .unique();
-    for (BnfRule rule : ordered) {
-      RuleInfo info = ruleInfo(rule);
-      BnfRule topSuper = supers.get(rule);
-      RuleInfo topInfo = topSuper == null || topSuper == rule ? null : ruleInfo(topSuper);
-      String superRuleClass = topSuper == null ? getRootAttribute(myFile, KnownAttribute.EXTENDS) :
-                              topSuper == rule ? getAttribute(rule, KnownAttribute.EXTENDS) :
-                              topInfo.implClass;
-      String stubName = info.realStubClass;
-      String adjustedSuperRuleClass =
-        StringUtil.isEmpty(stubName) ? superRuleClass :
-        AST_WRAPPER_PSI_ELEMENT_CLASS.equals(superRuleClass) ? STUB_BASED_PSI_ELEMENT_BASE + "<" + stubName + ">" :
-        superRuleClass.contains("?") ? superRuleClass.replaceAll("\\?", stubName) : superRuleClass;
-      // mixin attribute overrides "extends":
-      info.realSuperClass = StringUtil.notNullize(info.mixin, adjustedSuperRuleClass);
-      info.mixedAST = topInfo != null ? topInfo.mixedAST : JBIterable.of(superRuleClass, info.realSuperClass)
-                                                             .map(NameShortener::getRawClassName)
-                                                             .flatMap(s -> JBTreeTraverser.<String>from(
-                                                               o -> JBIterable.of(myJavaHelper.getSuperClassName(o))).withRoot(s).unique())
-                                                             .find(COMPOSITE_PSI_ELEMENT_CLASS::equals) != null;
-    }
-  }
-
   public void addWarning(String text) {
     if (ApplicationManager.getApplication().isUnitTestMode()) {
       //noinspection UseOfSystemOutOrSystemErr
@@ -242,135 +223,11 @@ public class KotlinParserGenerator extends GeneratorBase {
   }
 
   @Override
-  protected void openOutput(String className) throws IOException {
-    final var classNameAdjusted = myPackagePrefix.isEmpty() ? className : StringUtil.trimStart(className, myPackagePrefix + ".");
-    final var file = new File(myOutputPath, classNameAdjusted.replace('.', File.separatorChar) + ".kt");
-    myOut = openOutputInner(className, file);
-  }
-
-  @Override
   public void generate() throws IOException {
-    {
-      generateParser();
-    }
-    Map<String, BnfRule> sortedCompositeTypes = new TreeMap<>();
-    Map<String, BnfRule> sortedPsiRules = new TreeMap<>();
-
-    for (BnfRule rule : myFile.getRules()) {
-      RuleInfo info = ruleInfo(rule);
-      if (info.intfPackage == null) continue;
-      String elementType = info.elementType;
-      if (StringUtil.isEmpty(elementType)) continue;
-      if (sortedCompositeTypes.containsKey(elementType)) continue;
-      if (!info.isFake || info.isInElementType) {
-        sortedCompositeTypes.put(elementType, rule);
-      }
-      sortedPsiRules.put(rule.getName(), rule);
-      info.superInterfaces = new LinkedHashSet<>(getSuperInterfaceNames(myFile, rule, myIntfClassFormat));
-    }
-    if (myGrammarRoot != null && (G.generateTokenTypes || G.generateElementTypes)) {
-      openOutput(myTypeHolderClass);
-      try {
-        generateElementTypesHolder(myTypeHolderClass, sortedCompositeTypes);
-      }
-      finally {
-        closeOutput();
-      }
-    }
+    generateParser();
   }
 
-  private void checkClassAvailability(@Nullable String className, @Nullable String description) {
-    if (StringUtil.isEmpty(className)) return;
-    if (myJavaHelper.findClass(className) == null) {
-      String tail = StringUtil.isEmpty(description) ? "" : " (" + description + ")";
-      addWarning(className + " class not found" + tail);
-    }
-  }
-
-  private void generateVisitor(String psiClass, Map<String, BnfRule> sortedRules) {
-    String superIntf = ObjectUtils.notNull(ContainerUtil.getFirstItem(getRootAttribute(myFile, KnownAttribute.IMPLEMENTS)),
-                                           KnownAttribute.IMPLEMENTS.getDefaultValue().get(0)).second;
-    Set<String> imports = new LinkedHashSet<>(Arrays.asList("org.jetbrains.annotations.*", PSI_ELEMENT_VISITOR_CLASS, superIntf));
-    MultiMap<String, String> supers = new MultiMap<>();
-    for (BnfRule rule : sortedRules.values()) {
-      supers.putValues(rule.getName(), getSuperInterfaceNames(myFile, rule, myIntfClassFormat));
-    }
-    {
-      // ensure only public supers are exposed, replace non-public with default super-intf for simplicity
-      Map<String, String> replacements = new HashMap<>();
-      Set<String> visited = new HashSet<>();
-      for (String s : supers.values()) {
-        if (!visited.add(s)) continue;
-        NavigatablePsiElement aClass = myJavaHelper.findClass(s);
-        if (aClass != null && !myJavaHelper.isPublic(aClass)) {
-          replacements.put(s, superIntf);
-        }
-      }
-      for (String key : supers.keySet()) {
-        for (ListIterator<String> it = ((List<String>)supers.get(key)).listIterator(); it.hasNext(); ) {
-          String s = replacements.get(it.next());
-          if (s != null) {
-            if (s.isEmpty()) {
-              it.remove();
-            }
-            else {
-              it.set(s);
-            }
-          }
-        }
-      }
-    }
-    imports.addAll(ContainerUtil.sorted(
-      JBIterable.from(sortedRules.values()).map(this::ruleInfo).map(o -> o.intfPackage + ".*").toSet()));
-    imports.addAll(supers.values());
-    String r = G.visitorValue != null ? "<" + G.visitorValue + ">" : "";
-    String t = G.visitorValue != null ? G.visitorValue : "void";
-    String ret = G.visitorValue != null ? "return " : "";
-    generateClassHeader(psiClass + r, imports, "", Java.CLASS, PSI_ELEMENT_VISITOR_CLASS);
-    Set<String> visited = new HashSet<>();
-    Set<String> all = new TreeSet<>();
-    for (BnfRule rule : sortedRules.values()) {
-      String methodName = getRulePsiClassName(rule, null);
-      visited.add(methodName);
-      out("public %s visit%s(%s %s o) {", t, methodName, shorten(NOTNULL_ANNO), getRulePsiClassName(rule, myIntfClassFormat));
-      boolean first = true;
-      for (String top : supers.get(rule.getName())) {
-        if (!first && top.equals(superIntf)) continue;
-        top = getRawClassName(top);
-        if (first) all.add(top);
-        String text = "visit" + myIntfClassFormat.strip(StringUtil.getShortName(top)) + "(o);";
-        if (first) {
-          out(ret + text);
-        }
-        else {
-          out("// " + text);
-        }
-        if (first) first = false;
-      }
-      out("}");
-      newLine();
-    }
-    all.remove(superIntf);
-    for (String top : JBIterable.from(all).append(superIntf)) {
-      String methodName = myIntfClassFormat.strip(StringUtil.getShortName(top));
-      if (visited.contains(methodName)) continue;
-      out("public %s visit%s(%s %s o) {", t, methodName, shorten(NOTNULL_ANNO), shorten(top));
-      if (!methodName.equals(StringUtil.getShortName(top)) && !top.equals(superIntf)) {
-        out(ret + "visit" + myIntfClassFormat.strip(StringUtil.getShortName(superIntf)) + "(o)");
-      }
-      else {
-        String superPrefix = methodName.equals("Element") ? "super." : "";
-        out(superPrefix + "visitElement(o)");
-        if (G.visitorValue != null) out(ret + "null");
-      }
-      out("}");
-      newLine();
-    }
-
-    out("}");
-  }
-
-  public void generateParser() throws IOException {
+  private void generateParser() throws IOException {
     Map<String, Set<RuleInfo>> classified = ContainerUtil.classify(myRuleInfos.values().iterator(), o -> o.parserClass);
     for (String className : ContainerUtil.sorted(classified.keySet())) {
       openOutput(className);
@@ -383,6 +240,17 @@ public class KotlinParserGenerator extends GeneratorBase {
     }
   }
 
+  /**
+   * Outputs the following elements:
+   * <ul>
+   *   <li>file header</li>
+   *   <li>package declaration</li>
+   *   <li>imports</li>
+   *   <li>annotations</li>
+   *   <li>class header (from the `class` keyword to the opening brace,
+   *       inclusive)</li>
+   * </ul>
+   */
   @Override
   protected void generateClassHeader(String className, Set<String> imports, String annos, Java javaType, String... supers) {
     // file header
@@ -443,10 +311,12 @@ public class KotlinParserGenerator extends GeneratorBase {
     myShortener = shortener;
   }
 
-  public void generateParser(String parserClass, Collection<String> ownRuleNames) {
-    List<String> parserImports = getRootAttribute(myFile, KnownAttribute.PARSER_IMPORTS).asStrings();
-    boolean rootParser = parserClass.equals(myGrammarRootParser);
-    Set<String> imports = new LinkedHashSet<>();
+  /**
+   * Creates and returns a set of all imports to be included in the parser.
+   */
+  private @NotNull Set<@NotNull String> generateImportsSet(boolean isRootParser, @NotNull Collection<String> ownRuleNames) {
+    final var parserImports = getRootAttribute(myFile, KnownAttribute.PARSER_IMPORTS).asStrings();
+    final var imports = new LinkedHashSet<String>();
     if (!G.generateFQN) {
       imports.add(C.PsiBuilderClass);
       imports.add(C.PsiBuilderClass + ".Marker");
@@ -461,7 +331,7 @@ public class KotlinParserGenerator extends GeneratorBase {
     if (StringUtil.isNotEmpty(myParserUtilClass)) {
       imports.add(staticStarImport(myParserUtilClass));
     }
-    if (!rootParser) {
+    if (!isRootParser) {
       imports.add(staticStarImport(myGrammarRootParser));
     }
     else if (!G.generateFQN) {
@@ -472,21 +342,35 @@ public class KotlinParserGenerator extends GeneratorBase {
                                    C.LightPsiParserClass));
     }
     imports.addAll(parserImports);
+    return imports;
+  }
 
-    generateClassHeader(parserClass, imports,
-                        "",//SUPPRESS_WARNINGS_ANNO + "({\"SimplifiableIfStatement\", \"UnusedAssignment\"})",
+  private static final @NotNull String HORIZONTAL_SEPARATOR = "/* ********************************************************** */";
+
+  private void generateParser(String parserClass, Collection<String> ownRuleNames) {
+    final var isRootParser = parserClass.equals(myGrammarRootParser);
+    final var imports = generateImportsSet(isRootParser, ownRuleNames);
+
+    generateClassHeader(parserClass,
+                        imports,
+                        "",
                         Java.CLASS, "",
-                        rootParser ? C.PsiParserClass : "",
-                        rootParser ? C.LightPsiParserClass : "");
+                        isRootParser ? C.PsiParserClass : "",
+                        isRootParser ? C.LightPsiParserClass : "");
 
-    if (rootParser) {
-      generateRootParserContent();
+    if (isRootParser) {
+      generateRootParserNonStatics();
+      out("companion object {");
+      generateRootParserStatics();
+    } else {
+      out("companion object {");
     }
+
     for (String ruleName : ownRuleNames) {
       BnfRule rule = Objects.requireNonNull(myFile.getRule(ruleName));
       if (Rule.isExternal(rule) || Rule.isFake(rule)) continue;
       if (myExpressionHelper.getExpressionInfo(rule) != null) continue;
-      out("/* ********************************************************** */");
+      out(HORIZONTAL_SEPARATOR);
       generateNode(rule, rule.getExpression(), getFuncName(rule), new HashSet<>());
       newLine();
     }
@@ -494,18 +378,23 @@ public class KotlinParserGenerator extends GeneratorBase {
       BnfRule rule = myFile.getRule(ruleName);
       ExpressionHelper.ExpressionInfo info = myExpressionHelper.getExpressionInfo(rule);
       if (info != null && info.rootRule == rule) {
-        out("/* ********************************************************** */");
+        out(HORIZONTAL_SEPARATOR);
         ExpressionGeneratorHelper.generateExpressionRoot(info, this);
         newLine();
       }
     }
-    boolean addNewLine = !myParserLambdas.isEmpty() && !myMetaMethodFields.isEmpty();
+    final var addNewLine = !myParserLambdas.isEmpty() && !myMetaMethodFields.isEmpty();
     generateParserLambdas(parserClass);
     if (addNewLine) newLine();
     generateMetaMethodFields();
-    out("}");
+
+    out("}"); // closes the companion object
+    out("}"); // and the class itself
   }
 
+  /**
+   * These *must* be in a companion object.
+   */
   private void generateParserLambdas(@NotNull String parserClass) {
     Map<String, String> reversedLambdas = new HashMap<>();
     take(myParserLambdas).forEach((name, body) -> {
@@ -520,16 +409,19 @@ public class KotlinParserGenerator extends GeneratorBase {
   }
 
   private @NotNull String generateParserInstance(@NotNull String body) {
-    return "Parser { %s, %s -> %s }".formatted(NAMES.builder, NAMES.level, body);
+    return "Parser { %s, %s -> %s }".formatted(N.builder, N.level, body);
   }
 
+  /**
+   * These *must* be surrounded in a companion object.
+   */
   private void generateMetaMethodFields() {
     take(myMetaMethodFields).forEach(
-      (field, call) -> out("private static final Parser " + field + " = " + call)
+      (field, call) -> out("private val %s: Parser = %s", field, call)
     );
   }
-
-  private void generateRootParserContent() {
+  
+  private void generateRootParserNonStatics() {
     BnfRule rootRule = myFile.getRule(myGrammarRoot);
     List<BnfRule> extraRoots = new ArrayList<>();
     for (String ruleName : myRuleInfos.keySet()) {
@@ -543,63 +435,77 @@ public class KotlinParserGenerator extends GeneratorBase {
       extraRoots.add(rule);
     }
 
-    List<Set<String>> extendsSet = buildExtendsSet(myGraphHelper.getRuleExtendsMap());
-    boolean generateExtendsSets = !extendsSet.isEmpty();
     String shortElementType = shorten(C.IElementTypeClass);
     String shortASTNode = shorten(C.AstNodeClass);
     String shortPsiBuilder = shorten(C.PsiBuilderClass);
-    String shortTokenSet = shorten(C.TokenSetClass);
+    shorten(C.TokenSetClass);
     String shortMarker = !G.generateFQN ? "Marker" : C.PsiBuilderClass + ".Marker";
+    List<Set<String>> extendsSet = buildExtendsSet(myGraphHelper.getRuleExtendsMap());
+    boolean generateExtendsSets = !extendsSet.isEmpty();
 
     // parse() method
-    out("override fun parse(%s: %s, %s: %s): %s {", NAMES.root, shortElementType, NAMES.builder, shortPsiBuilder, shortASTNode);
-    out("parseLight(%s, %s)", NAMES.root, NAMES.builder);
-    out("return %s.getTreeBuilt()", NAMES.builder);
+    out("override fun parse(%s: %s, %s: %s): %s {", N.root, shortElementType, N.builder, shortPsiBuilder, shortASTNode);
+    out("parseLight(%s, %s)", N.root, N.builder);
+    out("return %s.getTreeBuilt()", N.builder);
     out("}");
-
     newLine();
 
     // parseLight() method
-    out("override fun parseLight(%s: %s, %s: %s) {", NAMES.root, shortElementType, NAMES.builder, shortPsiBuilder);
-    out("var %s: Boolean", NAMES.result);
-    out("val %s = adapt_builder_(%s, %s, this, %s)", NAMES.builder, NAMES.root, NAMES.builder,
-        generateExtendsSets ? "EXTENDS_SETS_" : null);
-    out("val %s: %s = enter_section_(%s, 0, _COLLAPSE_, null)", NAMES.marker, shortMarker, NAMES.builder);
-    out("%s = parse_root_(%s, %s)", NAMES.result, NAMES.root, NAMES.builder);
-    out("exit_section_(%s, 0, %s, %s, %s, true, TRUE_CONDITION)", NAMES.builder, NAMES.marker, NAMES.root, NAMES.result);
+    out("override fun parseLight(%s: %s, %s: %s) {", N.root, shortElementType, N.builder, shortPsiBuilder);
+    out("var %s: Boolean", N.result);
+    out("val %s = adapt_builder_(%s, %s, this, %s)", N.builder, N.root, N.builder, generateExtendsSets ? "EXTENDS_SETS_" : null);
+    out("val %s: %s = enter_section_(%s, 0, _COLLAPSE_, null)", N.marker, shortMarker, N.builder);
+    out("%s = parse_root_(%s, %s)", N.result, N.root, N.builder);
+    out("exit_section_(%s, 0, %s, %s, %s, true, TRUE_CONDITION)", N.builder, N.marker, N.root, N.result);
     out("}");
-
     newLine();
 
     // main parse_root_() method
-    out("protected fun parse_root_(%s: %s, %s: %s): Boolean {", NAMES.root, shortElementType, NAMES.builder, shortPsiBuilder);
-    out("return parse_root_(%s, %s, 0)", NAMES.root, NAMES.builder);
+    out("protected fun parse_root_(%s: %s, %s: %s): Boolean {", N.root, shortElementType, N.builder, shortPsiBuilder);
+    out("return parse_root_(%s, %s, 0)", N.root, N.builder);
     out("}");
-
     newLine();
+  }
 
-    // this is where statics begin - have to convert them to
-    // methods in a companion object
+  private void generateRootParserStatics() {
+    BnfRule rootRule = myFile.getRule(myGrammarRoot);
+    List<BnfRule> extraRoots = new ArrayList<>();
+    for (String ruleName : myRuleInfos.keySet()) {
+      BnfRule rule = Objects.requireNonNull(myFile.getRule(ruleName));
+      if (getAttribute(rule, KnownAttribute.ELEMENT_TYPE) != null) continue;
+      if (!hasElementType(rule)) continue;
+      if (Rule.isFake(rule) || Rule.isMeta(rule)) continue;
+      ExpressionHelper.ExpressionInfo info = myExpressionHelper.getExpressionInfo(rule);
+      if (info != null && info.rootRule != rule) continue;
+      if (!Boolean.TRUE.equals(getAttribute(rule, KnownAttribute.EXTRA_ROOT))) continue;
+      extraRoots.add(rule);
+    }
 
-    out("internal fun parse_root_(%s: %s, %s: %s, %s: Int): Boolean {", NAMES.root, shortElementType, NAMES.builder, shortPsiBuilder, NAMES.level);
+    String shortElementType = shorten(C.IElementTypeClass);
+    String shortPsiBuilder = shorten(C.PsiBuilderClass);
+    shorten(C.TokenSetClass);
+    List<Set<String>> extendsSet = buildExtendsSet(myGraphHelper.getRuleExtendsMap());
+    boolean generateExtendsSets = !extendsSet.isEmpty();
+
+    out("internal fun parse_root_(%s: %s, %s: %s, %s: Int): Boolean {", N.root, shortElementType, N.builder, shortPsiBuilder, N.level);
     if (extraRoots.isEmpty()) {
-      out("return %s", rootRule == null ? "false" : generateNodeCall(rootRule, null, myGrammarRoot).render(NAMES));
+      out("return %s", rootRule == null ? "false" : generateNodeCall(rootRule, null, myGrammarRoot).render(N));
     }
     else {
       boolean first = true;
-      out("boolean %s", NAMES.result);
+      out("boolean %s", N.result);
       for (BnfRule rule : extraRoots) {
         String elementType = getElementType(rule);
-        out("%sif (%s == %s) {", first ? "" : "else ", NAMES.root, elementType);
-        String nodeCall = generateNodeCall(ObjectUtils.notNull(rootRule, rule), null, rule.getName()).render(NAMES);
-        out("%s = %s", NAMES.result, nodeCall);
+        out("%sif (%s == %s) {", first ? "" : "else ", N.root, elementType);
+        String nodeCall = generateNodeCall(ObjectUtils.notNull(rootRule, rule), null, rule.getName()).render(N);
+        out("%s = %s", N.result, nodeCall);
         out("}");
         if (first) first = false;
       }
       out("else {");
-      out("%s = %s", NAMES.result, rootRule == null ? "false" : generateNodeCall(rootRule, null, myGrammarRoot).render(NAMES));
+      out("%s = %s", N.result, rootRule == null ? "false" : generateNodeCall(rootRule, null, myGrammarRoot).render(N));
       out("}");
-      out("return %s", NAMES.result);
+      out("return %s", N.result);
     }
     out("}");
     newLine();
@@ -611,6 +517,9 @@ public class KotlinParserGenerator extends GeneratorBase {
     }
   }
 
+  /**
+   * Generates the {@code EXTENDS_SETS_} array in the parser.
+   */
   private void generateExtendsSet(@NotNull List<Set<String>> extendsSet) {
     String shortTokenSet = shorten(C.TokenSetClass);
 
@@ -627,7 +536,6 @@ public class KotlinParserGenerator extends GeneratorBase {
       builder.setLength(0);
     }
     out(")");
-    newLine();
   }
 
   private @NotNull List<Set<String>> buildExtendsSet(@NotNull MultiMap<BnfRule, BnfRule> map) {
@@ -679,25 +587,9 @@ public class KotlinParserGenerator extends GeneratorBase {
   }
 
   /**
-   * Meta-methods are methods that take several {@link Parser Parser} instances as parameters and return another {@link Parser instance}.
-   *
-   * @param isRule whether meta-method may be used from another parser classes, and therefore should be accessible,
-   *               e.g. it is {@code true} for {@code meta rule ::= <<p>>},
-   *               and it is {@code false} for nested in-place method generated
-   *               for {@code <<p>> | some} in {@code meta rule ::= (<<p>> | some)* }.
+   * Generates a method corresponding to a given rule.
+   * This method *must* be enclosed in a companion object.
    */
-  private void generateMetaMethod(@NotNull String methodName, @NotNull List<String> parameterNames, boolean isRule) {
-    String parameterList = parameterNames.stream().map(it -> "Parser " + it).collect(joining(", "));
-    String argumentList = String.join(", ", parameterNames);
-    String metaParserMethodName = getWrapperParserMetaMethodName(methodName);
-    String call = format("%s(%s, %s + 1, %s)", methodName, NAMES.builder, NAMES.level, argumentList);
-    // @formatter:off
-    out("%sstatic Parser %s(%s) {", isRule ? "" : "private ", metaParserMethodName, parameterList);
-    out("return %s", generateParserInstance(call));
-    out("}");
-    // @formatter:on
-  }
-
   void generateNode(BnfRule rule, BnfExpression initialNode, String funcName, Set<BnfExpression> visited) {
     boolean isRule = initialNode.getParent() == rule;
     BnfExpression node = getNonTrivialNode(initialNode);
@@ -740,14 +632,14 @@ public class KotlinParserGenerator extends GeneratorBase {
     out("%sfun %s(%s: %s, %s: Int%s): Boolean {",
         !isRule ? "private " : isPrivate ? "internal " : "",
         funcName,
-        NAMES.builder,
+        N.builder,
         shorten(C.PsiBuilderClass),
-        NAMES.level,
+        N.level,
         extraParameters
     );
     if (isSingleNode) {
       if (isPrivate && !isLeftInner && recoverWhile == null && frameName == null) {
-        String nodeCall = generateNodeCall(rule, node, getNextName(funcName, 0)).render(NAMES);
+        String nodeCall = generateNodeCall(rule, node, getNextName(funcName, 0)).render(N);
         out("return %s", nodeCall);
         out("}");
         if (node instanceof BnfExternalExpression && ((BnfExternalExpression)node).getExpressionList().size() > 1) {
@@ -761,7 +653,7 @@ public class KotlinParserGenerator extends GeneratorBase {
     }
 
     if (!children.isEmpty()) {
-      out("if (!recursion_guard_(%s, %s, \"%s\")) return false", NAMES.builder, NAMES.level, funcName);
+      out("if (!recursion_guard_(%s, %s, \"%s\")) return false", N.builder, N.level, funcName);
     }
 
     if (recoverWhile == null && (isRule || firstNonTrivial)) {
@@ -773,9 +665,9 @@ public class KotlinParserGenerator extends GeneratorBase {
     boolean alwaysTrue = children.isEmpty() || type == BNF_OP_OPT || type == BNF_OP_ZEROMORE;
     boolean pinned = pinMatcher.active() && pinMatcher.shouldGenerate(children);
     if (!alwaysTrue) {
-      out("var %s: Boolean%s", NAMES.result, children.isEmpty() ? " = true" : "");
+      out("var %s: Boolean%s", N.result, children.isEmpty() ? " = true" : "");
       if (pinned) {
-        out("var %s: Boolean", NAMES.pinned);
+        out("var %s: Boolean", N.pinned);
       }
     }
 
@@ -800,16 +692,16 @@ public class KotlinParserGenerator extends GeneratorBase {
     String shortMarker = !G.generateFQN ? "Marker" : C.PsiBuilderClass + ".Marker";
     if (sectionRequiredSimple) {
       if (!sectionMaybeDropped) {
-        out("val %s: %s = enter_section_(%s)", NAMES.marker, shortMarker, NAMES.builder);
+        out("val %s: %s = enter_section_(%s)", N.marker, shortMarker, N.builder);
       }
     }
     else if (sectionRequired) {
       boolean shortVersion = frameName == null && elementTypeRef == null;
       if (shortVersion) {
-        out("val %s: %s = enter_section_(%s, %s, %s)", NAMES.marker, shortMarker, NAMES.builder, NAMES.level, modifiers);
+        out("val %s: %s = enter_section_(%s, %s, %s)", N.marker, shortMarker, N.builder, N.level, modifiers);
       }
       else {
-        out("val %s: %s = enter_section_(%s, %s, %s, %s, %s)", NAMES.marker, shortMarker, NAMES.builder, NAMES.level, modifiers,
+        out("val %s: %s = enter_section_(%s, %s, %s, %s, %s)", N.marker, shortMarker, N.builder, N.level, modifiers,
             elementTypeRef,
             frameName);
       }
@@ -825,40 +717,40 @@ public class KotlinParserGenerator extends GeneratorBase {
           ConsumeType consumeType = getEffectiveConsumeType(rule, node, null);
           NodeCall tokenChoice = generateTokenChoiceCall(children, consumeType, funcName);
           if (tokenChoice != null) {
-            out("%s = %s", NAMES.result, tokenChoice.render(NAMES));
+            out("%s = %s", N.result, tokenChoice.render(N));
             break;
           }
         }
-        out("%s%s = %s", i > 0 ? format("if (!%s) ", NAMES.result) : "", NAMES.result, nodeCall.render(NAMES));
+        out("%s%s = %s", i > 0 ? format("if (!%s) ", N.result) : "", N.result, nodeCall.render(N));
       }
       else if (type == BNF_SEQUENCE) {
         if (skip[0] == 0) {
           ConsumeType consumeType = getEffectiveConsumeType(rule, node, null);
           nodeCall = generateTokenSequenceCall(children, i, pinMatcher, pinApplied, skip, nodeCall, false, consumeType);
           if (i == 0) {
-            out("%s = %s", NAMES.result, nodeCall.render(NAMES));
+            out("%s = %s", N.result, nodeCall.render(N));
           }
           else {
             if (pinApplied && G.generateExtendedPin) {
               if (i == childrenSize - 1) {
                 // do not report error for last child
                 if (i == p + 1) {
-                  out("%s = %s && %s", NAMES.result, NAMES.result, nodeCall.render(NAMES));
+                  out("%s = %s && %s", N.result, N.result, nodeCall.render(N));
                 }
                 else {
-                  out("%s = %s && %s && %s", NAMES.result, NAMES.pinned, nodeCall.render(NAMES), NAMES.result);
+                  out("%s = %s && %s && %s", N.result, N.pinned, nodeCall.render(N), N.result);
                 }
               }
               else if (i == p + 1) {
-                out("%s = %s && report_error_(%s, %s)", NAMES.result, NAMES.result, NAMES.builder, nodeCall.render(NAMES));
+                out("%s = %s && report_error_(%s, %s)", N.result, N.result, N.builder, nodeCall.render(N));
               }
               else {
-                out("%s = %s && report_error_(%s, %s) && %s", NAMES.result, NAMES.pinned, NAMES.builder, nodeCall.render(NAMES),
-                    NAMES.result);
+                out("%s = %s && report_error_(%s, %s) && %s", N.result, N.pinned, N.builder, nodeCall.render(N),
+                    N.result);
               }
             }
             else {
-              out("%s = %s && %s", NAMES.result, NAMES.result, nodeCall.render(NAMES));
+              out("%s = %s && %s", N.result, N.result, nodeCall.render(N));
             }
           }
         }
@@ -869,27 +761,27 @@ public class KotlinParserGenerator extends GeneratorBase {
         if (pinned && !pinApplied && pinMatcher.matches(i, child)) {
           pinApplied = true;
           p = i;
-          out("%s = %s // pin = %s", NAMES.pinned, NAMES.result, pinMatcher.pinValue);
+          out("%s = %s // pin = %s", N.pinned, N.result, pinMatcher.pinValue);
         }
       }
       else if (type == BNF_OP_OPT) {
-        out(nodeCall.render(NAMES));
+        out(nodeCall.render(N));
       }
       else if (type == BNF_OP_ONEMORE || type == BNF_OP_ZEROMORE) {
         if (type == BNF_OP_ONEMORE) {
-          out("%s = %s", NAMES.result, nodeCall.render(NAMES));
+          out("%s = %s", N.result, nodeCall.render(N));
         }
-        out("while (%s) {", alwaysTrue ? "true" : NAMES.result);
-        out("val %s: Int = current_position_(%s)", NAMES.pos, NAMES.builder);
-        out("if (!%s) break", nodeCall.render(NAMES));
-        out("if (!empty_element_parsed_guard_(%s, \"%s\", %s)) break", NAMES.builder, funcName, NAMES.pos);
+        out("while (%s) {", alwaysTrue ? "true" : N.result);
+        out("val %s: Int = current_position_(%s)", N.pos, N.builder);
+        out("if (!%s) break", nodeCall.render(N));
+        out("if (!empty_element_parsed_guard_(%s, \"%s\", %s)) break", N.builder, funcName, N.pos);
         out("}");
       }
       else if (type == BNF_OP_AND) {
-        out("%s = %s", NAMES.result, nodeCall.render(NAMES));
+        out("%s = %s", N.result, nodeCall.render(N));
       }
       else if (type == BNF_OP_NOT) {
-        out("%s = !%s", NAMES.result, nodeCall.render(NAMES));
+        out("%s = !%s", N.result, nodeCall.render(N));
       }
       else {
         addWarning("unexpected: " + type);
@@ -897,20 +789,20 @@ public class KotlinParserGenerator extends GeneratorBase {
     }
 
     if (sectionRequired) {
-      String resultRef = alwaysTrue ? "true" : NAMES.result;
+      String resultRef = alwaysTrue ? "true" : N.result;
       if (!hooks.isEmpty()) {
         for (Map.Entry<String, String> entry : hooks.entrySet()) {
           String hookName = toIdentifier(entry.getKey(), null, Case.UPPER);
-          out("register_hook_(%s, %s, %s)", NAMES.builder, hookName, entry.getValue());
+          out("register_hook_(%s, %s, %s)", N.builder, hookName, entry.getValue());
         }
       }
       if (sectionRequiredSimple) {
         if (!sectionMaybeDropped) {
-          out("exit_section_(%s, %s, %s, %s)", NAMES.builder, NAMES.marker, elementTypeRef, resultRef);
+          out("exit_section_(%s, %s, %s, %s)", N.builder, N.marker, elementTypeRef, resultRef);
         }
       }
       else {
-        String pinnedRef = pinned ? NAMES.pinned : "false";
+        String pinnedRef = pinned ? N.pinned : "false";
         String recoverCall;
         if (recoverWhile != null) {
           BnfRule predicateRule = myFile.getRule(recoverWhile);
@@ -927,13 +819,34 @@ public class KotlinParserGenerator extends GeneratorBase {
         else {
           recoverCall = null;
         }
-        out("exit_section_(%s, %s, %s, %s, %s, %s)", NAMES.builder, NAMES.level, NAMES.marker, resultRef, pinnedRef, recoverCall);
+        out("exit_section_(%s, %s, %s, %s, %s, %s)", N.builder, N.level, N.marker, resultRef, pinnedRef, recoverCall);
       }
     }
 
-    out("return %s", alwaysTrue ? "true" : NAMES.result + (pinned ? format(" || %s", NAMES.pinned) : ""));
+    out("return %s", alwaysTrue ? "true" : N.result + (pinned ? format(" || %s", N.pinned) : ""));
     out("}");
     generateNodeChildren(rule, funcName, children, visited);
+  }
+  
+  /**
+   * Meta-methods are methods that take several {@link Parser Parser} instances as parameters and return another {@link Parser instance}.
+   * These *must* be enclosed in a companion object.
+   *
+   * @param isRule whether meta-method may be used from another parser classes, and therefore should be accessible,
+   *               e.g. it is {@code true} for {@code meta rule ::= <<p>>},
+   *               and it is {@code false} for nested in-place method generated
+   *               for {@code <<p>> | some} in {@code meta rule ::= (<<p>> | some)* }.
+   */
+  private void generateMetaMethod(@NotNull String methodName, @NotNull List<String> parameterNames, boolean isRule) {
+    String parameterList = parameterNames.stream().map(it -> "Parser " + it).collect(joining(", "));
+    String argumentList = String.join(", ", parameterNames);
+    String metaParserMethodName = getWrapperParserMetaMethodName(methodName);
+    String call = format("%s(%s, %s + 1, %s)", methodName, N.builder, N.level, argumentList);
+    // @formatter:off
+    out("%sstatic Parser %s(%s) {", isRule ? "" : "private ", metaParserMethodName, parameterList);
+    out("return %s", generateParserInstance(call));
+    out("}");
+    // @formatter:on
   }
 
   /**
@@ -959,7 +872,7 @@ public class KotlinParserGenerator extends GeneratorBase {
         break;
       }
     }
-    StringBuilder sb = new StringBuilder(format("!nextTokenIsFast(%s, ", NAMES.builder));
+    StringBuilder sb = new StringBuilder(format("!nextTokenIsFast(%s, ", N.builder));
 
     appendTokenTypes(sb, tokenTypes);
     sb.append(")");
@@ -985,8 +898,7 @@ public class KotlinParserGenerator extends GeneratorBase {
 
       ConsumeType childConsumeType = getRuleConsumeType(Objects.requireNonNull(Rule.of(expression)), rule);
       ConsumeType consumeType = ConsumeType.min(ruleConsumeType, childConsumeType);
-      ConsumeType existing = firstElementTypes.get(t);
-      firstElementTypes.put(t, ConsumeType.max(existing, consumeType));
+      firstElementTypes.compute(t, (k, existing) -> ConsumeType.max(existing, consumeType));
     }
     if (firstElementTypes.isEmpty()) return frameName;
 
@@ -1003,7 +915,7 @@ public class KotlinParserGenerator extends GeneratorBase {
         ConsumeType consumeType = entry.getKey();
         List<String> tokenTypes = entry.getValue();
         StringBuilder sb = new StringBuilder("!");
-        sb.append("nextTokenIs").append(consumeType.getMethodSuffix()).append("(").append(NAMES.builder).append(", ");
+        sb.append("nextTokenIs").append(consumeType.getMethodSuffix()).append("(").append(N.builder).append(", ");
         if (!dropFrameName && consumeType == ConsumeType.DEFAULT) sb.append(StringUtil.notNullize(frameName, "\"\"")).append(", ");
         appendTokenTypes(sb, tokenTypes);
         sb.append(")");
@@ -1024,7 +936,7 @@ public class KotlinParserGenerator extends GeneratorBase {
     return ObjectUtils.chooseNotNull(forcedConsumeType, ConsumeType.forRule(rule));
   }
 
-  void generateNodeChildren(BnfRule rule, String funcName, List<BnfExpression> children, Set<BnfExpression> visited) {
+  private void generateNodeChildren(BnfRule rule, String funcName, List<BnfExpression> children, Set<BnfExpression> visited) {
     for (int i = 0, len = children.size(); i < len; i++) {
       generateNodeChild(rule, children.get(i), funcName, i, visited);
     }
@@ -1069,8 +981,8 @@ public class KotlinParserGenerator extends GeneratorBase {
 
   private @NotNull String formatMetaParamName(@NotNull String s) {
     String argName = s.trim();
-    return NAMES.metaParamPrefix +
-           (NAMES.metaParamPrefix.isEmpty() || "_".equals(NAMES.metaParamPrefix) ? argName : StringUtil.capitalize(argName));
+    return N.metaParamPrefix +
+           (N.metaParamPrefix.isEmpty() || "_".equals(N.metaParamPrefix) ? argName : StringUtil.capitalize(argName));
   }
 
   private @Nullable String firstToElementType(String first) {
@@ -1127,16 +1039,13 @@ public class KotlinParserGenerator extends GeneratorBase {
     Collection<String> tokenNames = getTokenNames(myFile, children, 2);
     if (tokenNames == null) return null;
 
-    Set<String> tokens = new TreeSet<>();
     for (String tokenName : tokenNames) {
       if (!mySimpleTokens.containsKey(tokenName) && !mySimpleTokens.containsValue(tokenName)) {
         mySimpleTokens.put(tokenName, null);
       }
-      tokens.add(getElementType(tokenName));
     }
 
     String tokenSetName = getTokenSetConstantName(funcName);
-    myTokenSets.put(tokenSetName, tokens);
     return new ConsumeTokenChoiceCall(consumeType, tokenSetName);
   }
 
@@ -1215,7 +1124,7 @@ public class KotlinParserGenerator extends GeneratorBase {
     else if (type == BNF_EXTERNAL_EXPRESSION) {
       List<BnfExpression> expressions = ((BnfExternalExpression)node).getExpressionList();
       if (expressions.size() == 1 && Rule.isMeta(rule)) {
-        return new MetaParameterCall(formatMetaParamName(expressions.get(0).getText()));
+        return new MetaParameterCall(formatMetaParamName(expressions.getFirst().getText()));
       }
       else {
         return generateExternalCall(rule, expressions, nextName);
@@ -1255,7 +1164,7 @@ public class KotlinParserGenerator extends GeneratorBase {
                                                  @NotNull String nextName) {
     List<BnfExpression> callParameters = expressions;
     List<String> metaParameterNames = Collections.emptyList();
-    String method = expressions.size() > 0 ? expressions.get(0).getText() : null;
+    String method = !expressions.isEmpty() ? expressions.get(0).getText() : null;
     String targetClassName = null;
     BnfRule targetRule = method == null ? null : myFile.getRule(method);
     // handle external rule call: substitute and merge arguments from external expression and rule definition
@@ -1263,7 +1172,7 @@ public class KotlinParserGenerator extends GeneratorBase {
       if (Rule.isExternal(targetRule)) {
         metaParameterNames = GrammarUtil.collectMetaParameters(targetRule, targetRule.getExpression());
         callParameters = GrammarUtil.getExternalRuleExpressions(targetRule);
-        method = callParameters.get(0).getText();
+        method = callParameters.getFirst().getText();
         if (metaParameterNames.size() < expressions.size() - 1) {
           callParameters = ContainerUtil.concat(callParameters, expressions.subList(metaParameterNames.size() + 1, expressions.size()));
         }
@@ -1309,10 +1218,10 @@ public class KotlinParserGenerator extends GeneratorBase {
             arguments.add(new TextArgument(argument.startsWith("'") ? GrammarUtil.unquote(argument) : argument));
           }
         }
-        else if (nested instanceof BnfExternalExpression) {
-          List<BnfExpression> expressionList = ((BnfExternalExpression)nested).getExpressionList();
+        else if (nested instanceof BnfExternalExpression expression) {
+          List<BnfExpression> expressionList = expression.getExpressionList();
           if (expressionList.size() == 1 && Rule.isMeta(rule)) {
-            arguments.add(new MetaParameterArgument(formatMetaParamName(expressionList.get(0).getText())));
+            arguments.add(new MetaParameterArgument(formatMetaParamName(expressionList.getFirst().getText())));
           }
           else {
             arguments.add(generateWrappedNodeCall(rule, nested, argNextName));
@@ -1329,8 +1238,7 @@ public class KotlinParserGenerator extends GeneratorBase {
 
   private @NotNull NodeArgument generateWrappedNodeCall(@NotNull BnfRule rule, @Nullable BnfExpression nested, @NotNull String nextName) {
     NodeCall nodeCall = generateNodeCall(rule, nested, nextName);
-    if (nodeCall instanceof MetaMethodCall) {
-      MetaMethodCall metaCall = (MetaMethodCall)nodeCall;
+    if (nodeCall instanceof MetaMethodCall metaCall) {
       MetaMethodCallArgument argument = new MetaMethodCallArgument(metaCall);
       if (metaCall.referencesMetaParameter()) {
         return argument;
@@ -1339,8 +1247,7 @@ public class KotlinParserGenerator extends GeneratorBase {
         return () -> getMetaMethodFieldRef(argument.render(), nextName);
       }
     }
-    else if (nodeCall instanceof MethodCall && G.javaVersion > 6) {
-      MethodCall methodCall = (MethodCall)nodeCall;
+    else if (nodeCall instanceof MethodCall methodCall && G.javaVersion > 6) {
       return () -> format("%s::%s", methodCall.getClassName(), methodCall.getMethodName());
     }
     else {
@@ -1361,7 +1268,7 @@ public class KotlinParserGenerator extends GeneratorBase {
       return StringUtil.getShortName(targetClass) + "." + constantName;
     }
     else if (!myParserLambdas.containsKey(constantName)) {
-      String call = nodeCall.render(NAMES);
+      String call = nodeCall.render(N);
       myParserLambdas.put(constantName, call);
       if (!call.startsWith(nextName + "(")) {
         myInlinedChildNodes.add(nextName);
@@ -1375,11 +1282,10 @@ public class KotlinParserGenerator extends GeneratorBase {
   }
 
   private @NotNull NodeCall generateConsumeToken(@NotNull ConsumeType consumeType, @NotNull String tokenName) {
-    myTokensUsedInGrammar.add(tokenName);
     return new ConsumeTokenCall(consumeType, getElementType(tokenName));
   }
 
-  public static @NotNull NodeCall generateConsumeTextToken(@NotNull ConsumeType consumeType, @NotNull String tokenText) {
+  private static @NotNull NodeCall generateConsumeTextToken(@NotNull ConsumeType consumeType, @NotNull String tokenText) {
     return new ConsumeTokenCall(consumeType, "\"" + tokenText + "\"");
   }
 
@@ -1392,611 +1298,4 @@ public class KotlinParserGenerator extends GeneratorBase {
   }
 
   /*ElementTypes******************************************************************/
-
-  private void generateElementTypesHolder(String className, Map<String, BnfRule> sortedCompositeTypes) {
-    String tokenTypeClass = getRootAttribute(myFile, KnownAttribute.TOKEN_TYPE_CLASS);
-    String tokenTypeFactory = getRootAttribute(myFile, KnownAttribute.TOKEN_TYPE_FACTORY);
-    Set<String> imports = new LinkedHashSet<>();
-    imports.add(C.IElementTypeClass);
-    if (G.generatePsi) {
-      imports.add(C.PsiElementClass);
-      imports.add(C.AstNodeClass);
-    }
-    if (G.generateTokenSets && !myTokenSets.isEmpty()) {
-      imports.add(C.TokenSetClass);
-    }
-    boolean useExactElements = "all".equals(G.generateExactTypes) || G.generateExactTypes.contains("elements");
-    boolean useExactTokens = "all".equals(G.generateExactTypes) || G.generateExactTypes.contains("tokens");
-
-    Map<String, Trinity<String, String, RuleInfo>> compositeToClassAndFactoryMap = new HashMap<>();
-    for (String elementType : sortedCompositeTypes.keySet()) {
-      BnfRule rule = sortedCompositeTypes.get(elementType);
-      RuleInfo ruleInfo = ruleInfo(rule);
-      String elementTypeClass = getAttribute(rule, KnownAttribute.ELEMENT_TYPE_CLASS);
-      String elementTypeFactory = getAttribute(rule, KnownAttribute.ELEMENT_TYPE_FACTORY);
-      compositeToClassAndFactoryMap.put(elementType, Trinity.create(elementTypeClass, elementTypeFactory, ruleInfo));
-      if (useFactory(elementTypeFactory)) {
-        imports.add(StringUtil.getPackageName(elementTypeFactory));
-      }
-      else {
-        ContainerUtil.addIfNotNull(imports, elementTypeClass);
-      }
-    }
-    if (useFactory(tokenTypeFactory)) {
-      imports.add(StringUtil.getPackageName(tokenTypeFactory));
-    }
-    else {
-      ContainerUtil.addIfNotNull(imports, tokenTypeClass);
-    }
-    if (G.generatePsi) {
-      imports.addAll(ContainerUtil.sorted(
-        JBIterable.from(sortedCompositeTypes.values()).map(this::ruleInfo).map(o -> o.implPackage + ".*").toSet()));
-      if (G.generatePsiClassesMap) {
-        imports.add(CommonClassNames.JAVA_UTIL_COLLECTIONS);
-        imports.add(CommonClassNames.JAVA_UTIL_SET);
-        imports.add("java.util.LinkedHashMap");
-      }
-      if (G.generatePsiFactory) {
-        if (JBIterable.from(myRuleInfos.values()).find(o -> o.mixedAST) != null) {
-          imports.add(COMPOSITE_PSI_ELEMENT_CLASS);
-        }
-      }
-    }
-    generateClassHeader(className, imports, "", Java.INTERFACE);
-    if (G.generateElementTypes) {
-      for (String elementType : sortedCompositeTypes.keySet()) {
-        Trinity<String, String, RuleInfo> info = compositeToClassAndFactoryMap.get(elementType);
-        String elementCreateCall;
-        if (!useFactory(info.second)) {
-          elementCreateCall = "new " + shorten(info.first);
-        }
-        else {
-          elementCreateCall = shorten(StringUtil.getPackageName(info.second)) + "." + StringUtil.getShortName(info.second);
-        }
-        String fieldType = useExactElements && info.first != null ? info.first : C.IElementTypeClass;
-        String callFix = elementCreateCall.endsWith("IElementType") ? ", null" : "";
-        out("%s %s = %s(\"%s\"%s)", shorten(fieldType), elementType, elementCreateCall, elementType, callFix);
-      }
-    }
-    if (G.generateTokenTypes) {
-      newLine();
-      String exactType = null;
-      Map<String, String> sortedTokens = new TreeMap<>();
-      String tokenCreateCall;
-      if (!useFactory(tokenTypeFactory)) {
-        exactType = tokenTypeClass;
-        tokenCreateCall = "new " + shorten(exactType);
-      }
-      else {
-        tokenCreateCall = shorten(StringUtil.getPackageName(tokenTypeFactory)) + "." + StringUtil.getShortName(tokenTypeFactory);
-      }
-      String fieldType = ObjectUtils.notNull(useExactTokens ? exactType : null, C.IElementTypeClass);
-      for (String tokenText : mySimpleTokens.keySet()) {
-        String tokenName = ObjectUtils.chooseNotNull(mySimpleTokens.get(tokenText), tokenText);
-        if (isIgnoredWhitespaceToken(tokenName, tokenText)) continue;
-        sortedTokens.put(getElementType(tokenName), isRegexpToken(tokenText) ? tokenName : tokenText);
-      }
-      for (String tokenType : sortedTokens.keySet()) {
-        String callFix = tokenCreateCall.endsWith("IElementType") ? ", null" : "";
-        String tokenString = sortedTokens.get(tokenType);
-        out("%s %s = %s(\"%s\"%s)", shorten(fieldType), tokenType, tokenCreateCall, StringUtil.escapeStringCharacters(tokenString),
-            callFix);
-      }
-      generateTokenSets();
-    }
-    if (G.generatePsi && G.generatePsiClassesMap) {
-      String shortJC = shorten(CommonClassNames.JAVA_LANG_CLASS);
-      String shortET = shorten(C.IElementTypeClass);
-      newLine();
-      out("class Classes {");
-      newLine();
-      out("public static %s<?> findClass(%s elementType) {", shortJC, shortET);
-      out("return ourMap.get(elementType)");
-      out("}");
-      newLine();
-      out("public static %s<%s> elementTypes() {", shorten(CommonClassNames.JAVA_UTIL_SET), shortET);
-      out("return %s.unmodifiableSet(ourMap.keySet())", shorten(CommonClassNames.JAVA_UTIL_COLLECTIONS));
-      out("}");
-      newLine();
-      String type = shorten("java.util.LinkedHashMap<" + C.IElementTypeClass + ", java.lang.Class<?>>");
-      out("private static final %s ourMap = new %1$s()", type);
-      newLine();
-      out("static {");
-      for (String elementType : sortedCompositeTypes.keySet()) {
-        BnfRule rule = sortedCompositeTypes.get(elementType);
-        RuleInfo info = ruleInfo(rule);
-        if (info.isAbstract) continue;
-        String psiClass = getRulePsiClassName(rule, myImplClassFormat);
-        out("ourMap.put(" + elementType + ", " + psiClass + ".class)");
-      }
-      out("}");
-      out("}");
-    }
-    if (G.generatePsi && G.generatePsiFactory) {
-      newLine();
-      boolean first1;
-      boolean first2;
-      out("class Factory {");
-      first1 = true;
-      for (String elementType : sortedCompositeTypes.keySet()) {
-        BnfRule rule = sortedCompositeTypes.get(elementType);
-        RuleInfo info = ruleInfo(rule);
-        if (info.isAbstract) continue;
-        if (info.mixedAST) continue;
-        if (first1) {
-          out("public static %s createElement(%s node) {", shorten(C.PsiElementClass), shorten(C.AstNodeClass));
-          out("%s type = node.getElementType()", shorten(C.IElementTypeClass));
-        }
-        String psiClass = getAttribute(rule, KnownAttribute.PSI_IMPL_PACKAGE) + "." + getRulePsiClassName(rule, myImplClassFormat);
-        out((!first1 ? "else " : "") + "if (type == " + elementType + ") {");
-        out("return new " + shorten(psiClass) + "(node)");
-        first1 = false;
-        out("}");
-      }
-      if (!first1) {
-        out("throw new AssertionError(\"Unknown element type: \" + type)");
-        out("}");
-      }
-      first2 = true;
-      for (String elementType : sortedCompositeTypes.keySet()) {
-        BnfRule rule = sortedCompositeTypes.get(elementType);
-        RuleInfo info = ruleInfo(rule);
-        if (info.isAbstract) continue;
-        if (!info.mixedAST) continue;
-        if (first2) {
-          if (!first1) newLine();
-          out("public static %s createElement(%s type) {", shorten(COMPOSITE_PSI_ELEMENT_CLASS),
-              shorten(C.IElementTypeClass));
-        }
-        String psiClass = getRulePsiClassName(rule, myImplClassFormat);
-        out((!first2 ? "else" : "") + " if (type == " + elementType + ") {");
-        out("return new " + psiClass + "(type)");
-        first2 = false;
-        out("}");
-      }
-      if (!first2) {
-        out("throw new AssertionError(\"Unknown element type: \" + type)");
-        out("}");
-      }
-      out("}");
-    }
-    out("}");
-  }
-
-  protected boolean useFactory(String factory) {
-    return factory != null;
-  }
-
-  private boolean isIgnoredWhitespaceToken(@NotNull String tokenName, @NotNull String tokenText) {
-    return isRegexpToken(tokenText) &&
-           !myTokensUsedInGrammar.contains(tokenName) &&
-           matchesAny(getRegexpTokenRegexp(tokenText), " ", "\n") &&
-           !matchesAny(getRegexpTokenRegexp(tokenText), "a", "1", "_", ".");
-  }
-
-  private void generateTokenSets() {
-    if (myTokenSets.isEmpty()) {
-      return;
-    }
-    newLine();
-    out("interface %s {", TOKEN_SET_HOLDER_NAME);
-    Map<String, String> reverseMap = new HashMap<>();
-    myTokenSets.forEach((name, tokens) -> {
-      String value = format("TokenSet.create(%s)", tokenSetString(tokens));
-      String alreadyRendered = reverseMap.putIfAbsent(value, name);
-      out("TokenSet %s = %s", name, ObjectUtils.chooseNotNull(alreadyRendered, value));
-    });
-    out("}");
-  }
-
-  /*PSI******************************************************************/
-  private void generatePsiIntf(BnfRule rule, RuleInfo info) {
-    String psiClass = info.intfClass;
-    String stubClass = info.stub;
-    Collection<String> psiSupers = info.superInterfaces;
-    if (StringUtil.isNotEmpty(stubClass)) {
-      psiSupers = new LinkedHashSet<>(psiSupers);
-      psiSupers.add(STUB_BASED_PSI_ELEMENT + "<" + stubClass + ">");
-    }
-
-    Set<String> imports = new LinkedHashSet<>();
-    imports.addAll(Arrays.asList("java.util.List",
-                                 "org.jetbrains.annotations.*",
-                                 C.PsiElementClass));
-    imports.addAll(psiSupers);
-    imports.addAll(getRuleMethodTypesToImport(rule));
-
-    generateClassHeader(psiClass, imports, "", Java.INTERFACE, ArrayUtil.toStringArray(psiSupers));
-    generatePsiClassMethods(rule, info, true);
-    out("}");
-  }
-
-
-  private void generatePsiClassMethods(BnfRule rule, RuleInfo info, boolean intf) {
-    Set<String> visited = new TreeSet<>();
-    boolean mixedAST = info.mixedAST;
-    for (RuleMethodsHelper.MethodInfo methodInfo : myRulesMethodsHelper.getFor(rule)) {
-      if (StringUtil.isEmpty(methodInfo.name)) continue;
-      switch (methodInfo.type) {
-        case RULE, TOKEN -> generatePsiAccessor(rule, methodInfo, intf, mixedAST);
-        case USER -> generateUserPsiAccessors(rule, methodInfo, intf, mixedAST);
-        case MIXIN -> {
-          boolean found = false;
-          if (intf) {
-            String mixinClass = getAttribute(rule, KnownAttribute.MIXIN);
-            List<NavigatablePsiElement> methods =
-              myJavaHelper.findClassMethods(mixinClass, JavaHelper.MethodType.INSTANCE, methodInfo.name, -1);
-            for (NavigatablePsiElement method : methods) {
-              generateUtilMethod(methodInfo.name, method, true, false, visited);
-              found = true;
-            }
-          }
-          List<NavigatablePsiElement> methods = findRuleImplMethods(myJavaHelper, myPsiImplUtilClass, methodInfo.name, rule);
-          for (NavigatablePsiElement method : methods) {
-            generateUtilMethod(methodInfo.name, method, intf, true, visited);
-            found = true;
-          }
-          if (intf && !found) {
-            String ruleClassName = shorten(info.intfClass);
-            String implClassName = StringUtil.getShortName(String.valueOf(myPsiImplUtilClass));
-            out("""
-                  //WARNING: %s(...) is skipped
-                  //matching %s(%s, ...)
-                  //methods are not found in %s""",
-                methodInfo.name, methodInfo.name, ruleClassName, implClassName);
-            newLine();
-            addWarning(format("%s.%s(%s, ...) method not found", implClassName, methodInfo.name, ruleClassName));
-          }
-        }
-        default -> throw new AssertionError(methodInfo.toString());
-      }
-    }
-  }
-
-  public Collection<String> getRuleMethodTypesToImport(BnfRule rule) {
-    Set<String> result = new TreeSet<>();
-
-    Collection<RuleMethodsHelper.MethodInfo> methods = myRulesMethodsHelper.getFor(rule);
-    for (RuleMethodsHelper.MethodInfo methodInfo : methods) {
-      if (methodInfo.rule != null) {
-        result.add(getAccessorType(methodInfo.rule));
-      }
-      else if (methodInfo.type == RuleMethodsHelper.MethodType.USER) {
-        RuleMethodsHelper.MethodInfo targetInfo = null;
-        for (Object m : resolveUserPsiPathMethods(rule, methodInfo.path.split("/"))) {
-          if (m == null) break;
-          if (m instanceof String) continue;
-          targetInfo = (RuleMethodsHelper.MethodInfo)m;
-        }
-        if (targetInfo != null && targetInfo.rule != null) {
-          result.add(getAccessorType(targetInfo.rule));
-        }
-      }
-    }
-
-    String mixinClass = getAttribute(rule, KnownAttribute.MIXIN);
-
-    for (RuleMethodsHelper.MethodInfo methodInfo : methods) {
-      if (methodInfo.type != RuleMethodsHelper.MethodType.MIXIN) continue;
-
-      List<NavigatablePsiElement> mixinMethods =
-        myJavaHelper.findClassMethods(mixinClass, JavaHelper.MethodType.INSTANCE, methodInfo.name, -1);
-      List<NavigatablePsiElement> implMethods = findRuleImplMethods(myJavaHelper, myPsiImplUtilClass, methodInfo.name, rule);
-
-      collectMethodTypesToImport(mixinMethods, false, result);
-      collectMethodTypesToImport(implMethods, true, result);
-    }
-    return result;
-  }
-
-  private void collectMethodTypesToImport(@NotNull List<NavigatablePsiElement> methods, boolean isInPsiUtil, @NotNull Set<String> result) {
-    for (NavigatablePsiElement method : methods) {
-      List<String> types = myJavaHelper.getMethodTypes(method);
-      String returnType = ContainerUtil.getFirstItem(types);
-      addTypeToImports(returnType, myJavaHelper.getAnnotations(method), result);
-
-      for (JavaHelper.TypeParameterInfo generic : myJavaHelper.getGenericParameters(method)) {
-        for (String type : generic.getExtendsList()) {
-          addTypeToImports(type, emptyList(), result);
-        }
-        for (String type : generic.getAnnotations()) {
-          addTypeToImports(type, emptyList(), result);
-        }
-      }
-
-      for (int i = isInPsiUtil ? 3 : 1, count = types.size(); i < count; i += 2) {
-        String type = types.get(i);
-        addTypeToImports(type, myJavaHelper.getParameterAnnotations(method, (i - 1) / 2), result);
-      }
-
-      for (String exception : myJavaHelper.getExceptionList(method)) {
-        addTypeToImports(exception, emptyList(), result);
-      }
-    }
-  }
-
-
-  private void generatePsiAccessor(BnfRule rule, RuleMethodsHelper.MethodInfo methodInfo, boolean intf, boolean mixedAST) {
-    Cardinality type = methodInfo.cardinality;
-    boolean isToken = methodInfo.rule == null;
-
-    boolean many = type.many();
-
-    String getterName = methodInfo.generateGetterName();
-    if (!intf) out(shorten(OVERRIDE_ANNO));
-    if (type == REQUIRED) {
-      out(shorten(NOTNULL_ANNO));
-    }
-    else if (type == OPTIONAL) {
-      out(shorten(NULLABLE_ANNO));
-    }
-    else {
-      out(shorten(NOTNULL_ANNO));
-    }
-    String s = isToken ? C.PsiElementClass : getAccessorType(methodInfo.rule);
-    String className = shorten(s);
-    String tail = intf ? "();" : "() {";
-    out((intf ? "" : "public ") +
-        (many ? shorten(CommonClassNames.JAVA_UTIL_LIST) + "<" : "") +
-        className +
-        (many ? "> " : " ") +
-        getterName +
-        tail);
-    if (!intf) {
-      out("return " + generatePsiAccessorImplCall(rule, methodInfo, mixedAST));
-      out("}");
-    }
-    newLine();
-  }
-
-  private String generatePsiAccessorImplCall(@NotNull BnfRule rule, @NotNull RuleMethodsHelper.MethodInfo methodInfo, boolean mixedAST) {
-    boolean isToken = methodInfo.rule == null;
-
-    Cardinality type = methodInfo.cardinality;
-    boolean many = type.many();
-    boolean required = type == REQUIRED && !many;
-    boolean stubbed = !isToken &&
-                      ruleInfo(rule).realStubClass != null &&
-                      ruleInfo(methodInfo.rule).realStubClass != null;
-    String result;
-    // todo REMOVEME. Keep old generation logic for a while.
-    if (!mixedAST && myNoStubs) {
-      if (isToken) {
-        return (type == REQUIRED ? "findNotNullChildByType" : "findChildByType") +
-               "(" + getElementType(methodInfo.path) + ")";
-      }
-      else {
-        String className = shorten(getAccessorType(methodInfo.rule));
-        return many ? format("%s.getChildrenOfTypeAsList(this, %s.class)", shorten(myPsiTreeUtilClass), className) :
-               (type == REQUIRED ? "findNotNullChildByClass" : "findChildByClass") + "(" + className + ".class)";
-      }
-    }
-    // new logic
-    if (isToken) {
-      String getterName = mixedAST ? "findPsiChildByType" : "findChildByType";
-      result = getterName + "(" + getElementType(methodInfo.path) + ")";
-    }
-    else {
-      String className = shorten(getAccessorType(methodInfo.rule));
-      String getterName = stubbed && many ? "getStubChildrenOfTypeAsList" :
-                          stubbed ? "getStubChildOfType" :
-                          many ? "getChildrenOfTypeAsList" : "getChildOfType";
-      result = format("%s.%s(this, %s.class)", shorten(myPsiTreeUtilClass), getterName, className);
-    }
-    return required && !mixedAST ? "notNullChild(" + result + ")" : result;
-  }
-
-  private @NotNull String getAccessorType(@NotNull BnfRule rule) {
-    if (Rule.isExternal(rule)) {
-      Pair<String, String> first = ContainerUtil.getFirstItem(getAttribute(rule, KnownAttribute.IMPLEMENTS));
-      return Objects.requireNonNull(first).second;
-    }
-    else {
-      return ruleInfo(rule).intfClass;
-    }
-  }
-
-  private JBIterable<?> resolveUserPsiPathMethods(BnfRule startRule,
-                                                  String[] splitPath) {
-    BnfRule[] targetRule = {startRule};
-    return JBIterable.generate(0, i -> i + 1).take(splitPath.length).map(i -> {
-      String pathElement = splitPath[i];
-      int indexStart = pathElement.indexOf('[');
-      String item = indexStart > -1 ? pathElement.substring(0, indexStart).trim() : pathElement.trim();
-
-      if (item.isEmpty()) return item;
-      if (targetRule[0] == null) return null;
-      RuleMethodsHelper.MethodInfo targetInfo = myRulesMethodsHelper.getMethodInfo(targetRule[0], item);
-      targetRule[0] = targetInfo == null ? null : targetInfo.rule;
-      return targetInfo;
-    });
-  }
-
-  private void generateUserPsiAccessors(BnfRule startRule, RuleMethodsHelper.MethodInfo methodInfo, boolean intf, boolean mixedAST) {
-    StringBuilder sb = new StringBuilder();
-    BnfRule targetRule = startRule;
-    Cardinality cardinality = REQUIRED;
-    String context = "";
-    String[] splitPath = methodInfo.path.split("/");
-
-    int i = -1, count = 1;
-    boolean totalNullable = false;
-    for (Object m : resolveUserPsiPathMethods(startRule, splitPath)) {
-      String pathElement = splitPath[++i];
-      if (m instanceof String) continue;
-      boolean last = i == splitPath.length - 1;
-      int indexStart = pathElement.indexOf('[');
-      int indexEnd = indexStart > 0 ? pathElement.lastIndexOf(']') : -1;
-      String base = (indexStart > -1 ? pathElement.substring(0, indexStart) : pathElement).trim();
-      String index = indexEnd > -1 ? pathElement.substring(indexStart + 1, indexEnd).trim() : null;
-
-
-      RuleMethodsHelper.MethodInfo targetInfo = (RuleMethodsHelper.MethodInfo)m;
-      String error;
-      if (indexStart > 0 && (indexEnd == -1 || StringUtil.isNotEmpty(pathElement.substring(indexEnd + 1)))) {
-        error = "'<name>[<index>]' expected, got '" + pathElement + "'";
-      }
-      else if (targetInfo == null) {
-        Collection<String> available = targetRule == null ? null : myRulesMethodsHelper.getMethodNames(targetRule);
-        if (targetRule == null) {
-          error = "'" + base + "' not found in '" + splitPath[i - 1] + "' (not a rule)";
-        }
-        else if (available == null || available.isEmpty()) {
-          error = "'" + base + "' not found in '" + targetRule.getName() + "' (available: nothing)";
-        }
-        else {
-          error = "'" + base + "' not found in '" + targetRule.getName() + "' (available: " + String.join(", ", available) + ")";
-        }
-      }
-      else if (index != null && !targetInfo.cardinality.many()) {
-        error = "'[" + index + "]' unexpected after '" + base + getCardinalityText(targetInfo.cardinality) + "'";
-      }
-      else if (!last && index == null && targetInfo.cardinality.many()) {
-        error = "'[<index>]' required after '" + base + getCardinalityText(targetInfo.cardinality) + "'";
-      }
-      else if (i > 0 && StringUtil.isEmpty(targetInfo.name)) {
-        error = "'" + base + "' accessor suppressed in '" + splitPath[i - 1] + "'";
-      }
-      else {
-        error = null;
-      }
-      if (error != null) {
-        if (intf) { // warn only once
-          addWarning(format("%s#%s(\"%s\"): %s", startRule.getName(), methodInfo.name, methodInfo.path, error));
-        }
-        return;
-      }
-
-      boolean many = targetInfo.cardinality.many();
-      String className = shorten(targetInfo.rule == null ? C.PsiElementClass : getAccessorType(targetInfo.rule));
-
-      String type = (many ? shorten(CommonClassNames.JAVA_UTIL_LIST) + "<" : "") + className + (many ? "> " : " ");
-      String curId = NAMES.psiLocal + (count++);
-      if (!context.isEmpty()) {
-        if (cardinality.optional()) {
-          sb.append("if (").append(context).append(" == null) return null;\n");
-        }
-        context += ".";
-      }
-      if (last && index == null) {
-        sb.append("return ");
-      }
-      else {
-        sb.append(type).append(curId).append(" = ");
-      }
-      String targetCall;
-      if (StringUtil.isNotEmpty(targetInfo.name)) {
-        targetCall = targetInfo.generateGetterName() + "()";
-      }
-      else {
-        targetCall = generatePsiAccessorImplCall(startRule, targetInfo, mixedAST);
-      }
-      sb.append(context).append(targetCall).append(";\n");
-
-      context = curId;
-
-      targetRule = targetInfo.rule; // next accessors
-      cardinality = targetInfo.cardinality;
-      totalNullable |= cardinality.optional();
-
-      // list item
-      if (index != null) {
-        if ("first".equals(index)) index = "0";
-
-        context += ".";
-        boolean isLast = index.equals("last");
-        if (isLast) index = context + "size() - 1";
-        curId = NAMES.psiLocal + (count++);
-        if (last) {
-          sb.append("return ");
-        }
-        else {
-          sb.append(className).append(" ").append(curId).append(" = ");
-        }
-        if (cardinality != AT_LEAST_ONE || !index.equals("0")) { // range check
-          if (isLast) {
-            sb.append(context).append("isEmpty()? null : ");
-          }
-          else {
-            int val = StringUtil.parseInt(index, Integer.MAX_VALUE);
-            sb.append(context).append("size()").append(val == Integer.MAX_VALUE ? " - 1 < " + index : " < " + (val + 1))
-              .append(" ? null : ");
-          }
-        }
-        sb.append(context).append("get(").append(index).append(");\n");
-
-        context = curId;
-        cardinality = cardinality == AT_LEAST_ONE && index.equals("0") ? REQUIRED : OPTIONAL;
-        totalNullable |= cardinality.optional();
-      }
-    }
-
-    if (!intf) out(shorten(OVERRIDE_ANNO));
-
-    if (!cardinality.many() && cardinality == REQUIRED && !totalNullable) {
-      out(shorten(NOTNULL_ANNO));
-    }
-    else {
-      out(shorten(NULLABLE_ANNO));
-    }
-
-    boolean many = cardinality.many();
-    String s = targetRule == null ? C.PsiElementClass : getAccessorType(targetRule);
-    String className = shorten(s);
-    String getterName = getGetterName(methodInfo.name);
-    String tail = intf ? "();" : "() {";
-    out((intf ? "" : "public ") +
-        (many ? shorten(CommonClassNames.JAVA_UTIL_LIST) + "<" : "") +
-        className +
-        (many ? "> " : " ") +
-        getterName +
-        tail);
-
-    if (!intf) {
-      out(sb.toString());
-      out("}");
-    }
-    newLine();
-  }
-
-  private void generateUtilMethod(String methodName,
-                                  NavigatablePsiElement method,
-                                  boolean intf,
-                                  boolean isInPsiUtil,
-                                  Set<String> visited) {
-    List<String> methodTypes = method == null ? Collections.emptyList() : myJavaHelper.getMethodTypes(method);
-    String returnType = methodTypes.isEmpty() ? "void" : shorten(methodTypes.get(0));
-    int offset = methodTypes.isEmpty() || isInPsiUtil && methodTypes.size() < 3 ? 0 :
-                 isInPsiUtil ? 3 : 1;
-    if (!visited.add(methodName + methodTypes.subList(offset, methodTypes.size()))) return;
-    if (intf && methodTypes.size() == offset && "toString".equals(methodName)) return;
-
-    List<JavaHelper.TypeParameterInfo> genericParameters = myJavaHelper.getGenericParameters(method);
-    List<String> exceptionList = myJavaHelper.getExceptionList(method);
-
-    if (!intf /*|| hasMethodInInfos*/) out(shorten(OVERRIDE_ANNO));
-    for (String s : myJavaHelper.getAnnotations(method)) {
-      if ("java.lang.Override".equals(s)) continue;
-      if (s.startsWith("kotlin.")) continue;
-      out("@" + shorten(s));
-    }
-    Function<Integer, List<String>> annoProvider = i -> myJavaHelper.getParameterAnnotations(method, (i - 1) / 2);
-    Function<String, String> substitutor = ParserGeneratorUtil::unwrapTypeArgumentForParamList;
-    out("%s%s%s %s(%s)%s%s",
-        intf ? "" : "public ",
-        getGenericClauseString(genericParameters, getShortener()),
-        returnType,
-        methodName,
-        getParametersString(methodTypes, offset, 3, substitutor, annoProvider, getShortener()),
-        getThrowsString(exceptionList, getShortener()),
-        intf ? ";" : " {");
-    if (!intf) {
-      String implUtilRef = shorten(StringUtil.notNullize(myPsiImplUtilClass, KnownAttribute.PSI_IMPL_UTIL_CLASS.getName()));
-      String string = getParametersString(methodTypes, offset, 2, substitutor, annoProvider, getShortener());
-      out("%s%s.%s(this%s)", "void".equals(returnType) ? "" : "return ", implUtilRef, methodName,
-          string.isEmpty() ? "" : ", " + string);
-      out("}");
-    }
-    newLine();
-  }
 }
